--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "credentials":{
-        "project_id":"todo",
-        "location":"todo",
-        "processor_id":"todo"
+        "project_id":"1077214502689",
+        "location":"us",
+        "processor_id":"8453e265471d0ec7"
     },
     "files": [
       "15G.zip",
